alert.scss: fix: styling for better colour contrast

--- a/www/css/alert.scss
+++ b/www/css/alert.scss
@@ -1,12 +1,12 @@
 .alert {
   position: relative;
   width: 100%;
-  background: rgb(var(--col-bg-card-dark));
+  background: rgb(var(--col-bg-card-light));
   p, span {
     padding: 0px 30px;
   }
   &:before, &:after {
-    background: rgb(var(--col-fg-primary));
+    background: rgb(var(--grey));
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,12 +24,12 @@
   &:after {
     right: -100%;
     padding-right: 100%;
-    background: linear-gradient(90deg, rgb(var(--col-fg-primary)) 20px, rgb(var(--col-bg-default)) 0, rgb(var(--col-bg-default)) 100%);
-    --width-grow-duration: 1.5s;
+    background: linear-gradient(90deg, rgb(var(--grey)) 20px, rgb(var(--col-bg-default)) 0, rgb(var(--col-bg-default)) 100%);
+    --slide-right-duration: 1.5s;
     @media (prefers-reduced-motion) {
-        --width-grow-duration: 0s;
+      --slide-right-duration: 0s;
     }
-    animation: slide-right var(--width-grow-duration) cubic-bezier(0.27, 1.1, 0.25, 1);
+    animation: slide-right var(--slide-right-duration) cubic-bezier(0.27, 1.1, 0.25, 1);
   }
   &:before, &:after {
     content: ' ';
